<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_viewPager"
        android:layout_above="@+id/radioGroup"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main"
                android:checked="true"
                android:drawableTop="@drawable/main_backgroud_radiobutton_selector"
                android:textColor="@drawable/main_textcolor_radiobutton_selector"
                android:gravity="center_horizontal"
                android:button="@null"
                android:id="@+id/radioButton_main"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find"
                android:drawableTop="@drawable/find_backgroud_radiobutton_selector"
                android:textColor="@drawable/find_textcolor_radiobutton_selector"
                android:gravity="center_horizontal"
                android:button="@null"
                android:id="@+id/radioButton_find"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/personal"
                android:drawableTop="@drawable/personal_backgroud_radiobutton_selector"
                android:textColor="@drawable/personal_textcolor_radiobutton_selector"
                android:gravity="center_horizontal"
                android:button="@null"
                android:id="@+id/radioButton_personal"/>
        </RadioGroup>
</RelativeLayout>
